src/objects/Appeal_Code__c.object
<CustomObject>
    <description>Stores all appeal codes used by AACR Foundation staff</description>
    <fields>
        <fullName>Appeal_Year__c</fullName>
        <description>Foundation custom field to capture the year an appeal code was used.</description>
        <inlineHelpText>This field captures the year an appeal code was used.</inlineHelpText>
        <label>Appeal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Fund_Code__c</fullName>
        <label>Fund Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Appeal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>c4g_Description__c</columns>
        <columns>c4g_Campaign_Code__c</columns>
        <columns>c4g_Fund_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Appeal Codes with Details</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Appeal_Codes</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Appeal Codes</label>
        <sharedTo>
            <role>Foundation</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Appeal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appeal Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>